--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME="Equestrian Organizers"
 APP_ENV=production
 APP_KEY=base64:O5/zZtjqNlpK6s7DZyfThY6zu32tRmWKFMJOCU9ZrQ4=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://www.equestrianorganizers.com/
 
 LOG_CHANNEL=stack
